--- a/view/sugerenciaView.mustache
+++ b/view/sugerenciaView.mustache
@@ -13,6 +13,7 @@
                     <option value="Ciencia">Ciencia</option>
                 </select>
                 <input class="sugerencia" type="text" placeholder="Ingrese una respuesta (Correcta)" name="respuesta1">
+                <input type="hidden" name="correcta" value="1">
                 <input class="sugerencia" type="text" placeholder="Ingrese una respuesta" name="respuesta2">
                 <input class="sugerencia" type="text" placeholder="Ingrese una respuesta" name="respuesta3">
                 <input class="sugerencia" type="text" placeholder="Ingrese una respuesta" name="respuesta4">
