--- a/view/header.mustache
+++ b/view/header.mustache
@@ -17,7 +17,7 @@
     <h1 class="nombre ">Argentinazo: Hornero Editions</h1>
     <!-- ♠<svg></svg> -->
 
-    <a href="/Perfil/mostrarPantallaPerfil"><img src="../{{foto_de_usuario}}" class="account"></a>
-    
+    <a href="/Perfil/mostrarPantallaPerfil"><img src="../public/epic-hornero-admin.svg" class="account"></a>
+    <!-- //../{{foto_de_usuario}}" -->
 
 </header>
