cositas en modificar preguntas

--- a/view/editorPreguntasView.mustache
+++ b/view/editorPreguntasView.mustache
@@ -6,7 +6,7 @@
         <form action="/Perfil/modificarPregunta" method="post">
             <span>{{descripcion}}</span>
             <input type="hidden" value="{{id}}" name="id" >
-            <input type="text" placeholder="Ingrese la pregunta modificada" name="pregunta">
+            <input type="text" placeholder="Ingrese la pregunta modificada" name="pregunta" class ="input_mas_grande">
             <input class="boton-sec" type="submit" value="Modificar"><br>
         </form>
         {{/pregunta}}
