--- a/view/editarSugerenciasView.mustache
+++ b/view/editarSugerenciasView.mustache
@@ -40,5 +40,5 @@
         </form>
         {{/reportadas}}
     </div>
-    
 </div>
+<a href="/Lobby/mostrarPantallaLobby" class="boton">volver al lobby</a>
