--- a/view/editarSugerenciasView.mustache
+++ b/view/editarSugerenciasView.mustache
@@ -37,4 +37,6 @@
         {{/reportadas}}
     </div>
 </div>
-<a href="/Lobby/mostrarPantallaLobby" class="boton">volver al lobby</a>
+<div class="caja">
+<a href="/Lobby/mostrarPantallaLobby" class="boton mt centrado">volver al lobby</a>
+</div>
