--- a/view/editorPreguntasView.mustache
+++ b/view/editorPreguntasView.mustache
@@ -12,4 +12,6 @@
         {{/pregunta}}
     </div>
 </div>
-<a href="/Lobby/mostrarPantallaLobby" class="boton">volver al lobby</a>
+<div class="caja ">
+<a href="/Lobby/mostrarPantallaLobby" class="boton  centrado">volver al lobby</a>
+</div>
