--- a/public/styles.css
+++ b/public/styles.css
@@ -564,10 +564,10 @@ a {
     flex-direction: column;
     width: 70%;
     height: 70%;
-    margin: 20px auto;
+    margin: 5%  auto;
     background-color: #81c6f5;
-    border-radius: 25px;
-    padding: 10px;
+    border-radius: 1.563em;
+    padding: 0.625em;
 }
 
 #barraTiempo {
