--- a/view/lobbyadminView.mustache
+++ b/view/lobbyadminView.mustache
@@ -16,17 +16,9 @@
 
     </div>
 
-    <div class="caja-dos centrado ">
+    <div class="caja centrado ">
         
-        <div class="m">
-            <h3>ESTADO DE LA APLICACIÓN :</h3>
-            
-                <p>Cantidad de jugadores:<span>{{cantidadJugadores}}</span> </p>
-                <p>Cantidad de partidas jugadas: {{cantidadPartidas}}</p>
-                <p>Cantidad de preguntas en el juego: {{cantidadPreguntas}}</p>
-                <p>Cantidad de usuarios nuevos: {{usuariosNuevos}}</p>
-            
-        </div>
+        <a href="/Admin/estadisticas" class="boton">ver estado</a>
         
     </div>
     
@@ -35,7 +27,8 @@
     <div class="contenedor_cerrar_sesion">
     <div class="caja bye centrado">
         <p class="m mt">¿Se va Señor Admin?</p>
-        <a href="/Lobby/cerrarSesion" class="boton m">cerrar sesión</a>
+        <a href="/Admin/cerrarSesion" class="boton m">cerrar sesión</a>
     </div>
 </div>
+
 </div>
