--- a/view/perfilView.mustache
+++ b/view/perfilView.mustache
@@ -15,8 +15,11 @@
             <p>Mail: {{mail}}</p>
             <p>Nivel: {{nivel}}</p>
         {{/usuario}} 
+        <div class=" centrado mt">
         <a class="boton-sec">Editar perfil</a>
         <a href="/Perfil/mostrarPantallaSugerencias" class="boton-sec">Sugerir Pregunta</a>
         <a href="/Perfil/mostrarPantallaSugerencias" class="boton-sec">Añadir categoría</a>
     </div>
+</div>
+
 </div>
