--- a/view/header.mustache
+++ b/view/header.mustache
@@ -14,7 +14,7 @@
 <header class="header">
 
     <a href="/Lobby/mostrarPantallaLobby"><img src="../public/hornerito-panz-lirt.svg" class="logo shake-left-right"></a>
-    <h1 class="nombre ">Argentinazo: Hornero Editions</h1>
+    <h1 class="nombre ">Animalia: Hornero Editions</h1>
     <!-- ♠<svg></svg> -->
 
     <a href="/Perfil/mostrarPantallaPerfil"><img src="../public/epic-hornero-admin.svg" class="account"></a>
