--- a/view/lobbyadminView.mustache
+++ b/view/lobbyadminView.mustache
@@ -18,7 +18,7 @@
 
     <div class="caja centrado ">
         
-        <a href="/Admin/estadisticas" class="boton">ver estado</a>
+        <a href="/Admin/estadisticas" class="boton">ESTADISTICAS DE LA APP</a>
         
     </div>
     
