% de respuestas correctas por user

--- a/view/verEstadisticasView.mustache
+++ b/view/verEstadisticasView.mustache
@@ -15,7 +15,7 @@
 
                 <input type="submit" value="Enviar">
             </form>
-            <p>Porcentaje de preguntas respondidas correctamente: {{preguntasRespondidasCorrectamentePorUsuario}}</p>
+            <p>Porcentaje de preguntas respondidas correctamente: {{.}}</p>
 
         </div>
     </div>
