Vista de graficos de admin iniciada

--- a/view/verEstadisticasView.mustache
+++ b/view/verEstadisticasView.mustache
@@ -1,4 +1,7 @@
 <div class="caja">
+    <div>
+        <a class="boton-sec" href="/Admin/mostrarPantallaGraficos">Ver gráficos</a>
+    </div>
     <div class="caja-dos centrado">
         <div class="m centrado">
             <h3>ESTADO DE LA APLICACIÓN :</h3>
@@ -15,7 +18,7 @@
                     ha respondido correctamente: </p>
                 <input class="input_mas_grande" type="text" name="user_a_buscar">
 
-                <input  type="submit" value="Enviar">
+                <input class="boton-sec" type="submit" value="Enviar">
             </form>
             {{#porcentajeCorrectas}} 
                 <p>Porcentaje de preguntas respondidas correctamente: {{porcentaje_correctas}}</p>
