Grafico de genero funcional

--- a/view/graficosView.mustache
+++ b/view/graficosView.mustache
@@ -1,5 +1,11 @@
 <div class="caja">
     <div class="edad">
-        <a href="/Admin/graficoEdad">Ver grafico de edad</a>
+        <a href="/Admin/graficoEdad">Ver gráfico de edad
+            <img src="/public/graficoEdad.png" alt="">
+        </a>
+
+        <a href="/Admin/graficoGenero">Ver gráfico de género
+            <img src="/public/graficoGenero.png" alt="">
+        </a>
     </div>
 </div>
