Grafico de usuarios en el mundo

--- a/view/graficosView.mustache
+++ b/view/graficosView.mustache
@@ -1,11 +1,16 @@
 <div class="caja">
     <div class="edad">
-        <a href="/Admin/graficoEdad">Ver gráfico de edad
+        <a href="/Admin/graficoEdad">Ver gráfico de edad de usuarios
             <img src="/public/graficoEdad.png" alt="">
         </a>
 
-        <a href="/Admin/graficoGenero">Ver gráfico de género
+        <a href="/Admin/graficoGenero">Ver gráfico de género de usuarios
             <img src="/public/graficoGenero.png" alt="">
+        </a>
+    </div>
+    <div class="genero">
+        <a href="/Admin/graficoMundial">Ver gráfico de usuarios en el mundo
+            <img src="/public/graficoMundial.png" alt="">
         </a>
     </div>
 </div>
