--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,13 +1,11 @@
 
 <div class="caja ">
 
-    <div class="caja-uno centrado mt ">
+    <div class="caja-uno centrado">
         <h1 class="scale-up-vertical-center">¡Bienvenido, {{user}}!</h1>
         <img src="../public/hornerito-panzon-color.svg" alt="hornerito" id="hornerito">
         <p>PUNTAJE ALCANZADO : <span>{{puntaje}}</span> </p>
         <p>Nivel: <span> {{nivel}}</span> </p>
-        
-
     </div>
 
     <div class="caja-dos centrado ">
