Todos los graficos disponibles en PDF

--- a/view/graficosView.mustache
+++ b/view/graficosView.mustache
@@ -3,15 +3,17 @@
         <a href="/Admin/graficoEdad">Ver gráfico de edad de usuarios
             <img src="/public/graficoEdad.png" alt="">
         </a>
-
+        <a href="/Admin/imprimirPDF1" target="_blank">Imprimir</a>
         <a href="/Admin/graficoGenero">Ver gráfico de género de usuarios
             <img src="/public/graficoGenero.png" alt="">
         </a>
+        <a href="/Admin/imprimirPDF2" target="_blank">Imprimir</a>
     </div>
     <div class="genero">
         <a href="/Admin/graficoMundial">Ver gráfico de usuarios en el mundo
             <img src="/public/graficoMundial.png" alt="">
         </a>
-        <a href="/Admin/imprimirPDF" target="_blank">Imprimir</a>
+        <a href="/Admin/imprimirPDF3" target="_blank">Imprimir</a>
     </div>
+    <a class="boton-sec" href="/Admin/ImprimirTodo" target="_blank">Imprimir todos los gráficos juntos</a>
 </div>
