--- a/view/graficosView.mustache
+++ b/view/graficosView.mustache
@@ -1,19 +1,28 @@
-<div class="caja">
-    <div class="edad">
-        <a href="/Admin/graficoEdad">Ver gráfico de edad de usuarios
-            <img src="/public/graficoEdad.png" alt="">
-        </a>
-        <a href="/Admin/imprimirPDF1" target="_blank">Imprimir</a>
-        <a href="/Admin/graficoGenero">Ver gráfico de género de usuarios
-            <img src="/public/graficoGenero.png" alt="">
-        </a>
-        <a href="/Admin/imprimirPDF2" target="_blank">Imprimir</a>
-    </div>
-    <div class="genero">
-        <a href="/Admin/graficoMundial">Ver gráfico de usuarios en el mundo
-            <img src="/public/graficoMundial.png" alt="">
-        </a>
-        <a href="/Admin/imprimirPDF3" target="_blank">Imprimir</a>
-    </div>
-    <a class="boton-sec" href="/Admin/ImprimirTodo" target="_blank">Imprimir todos los gráficos juntos</a>
+<div class="caja gr-padre">
+   
+        <div class="gr">
+            <a href="/Admin/graficoEdad">VER EDADES
+                <img src="/public/graficoEdad.png" alt="">
+            </a>
+            <a href="/Admin/imprimirPDF1" target="_blank" class="boton">Imprimir</a>
+        </div>
+
+        <div class="gr">
+            <a href="/Admin/graficoGenero">VER GÉNEROS
+                <img src="/public/graficoGenero.png" alt="">
+            </a>
+            <a href="/Admin/imprimirPDF2" target="_blank" class="boton">Imprimir</a>
+        </div>
+   
+
+    
+        <div class=" gr">
+            <a href="/Admin/graficoMundial">VER DISTRIBUCIÓN GLOBAL
+                <img src="/public/graficoMundial.png" alt="">
+            </a>
+            <a href="/Admin/imprimirPDF3" target="_blank" class="boton">Imprimir</a>
+        </div>
+   
+
+    <a class="boton" href="/Admin/ImprimirTodo" target="_blank" class="boton">Imprimir todos los gráficos juntos</a>
 </div>
