--- a/view/lobbyadminView.mustache
+++ b/view/lobbyadminView.mustache
@@ -17,8 +17,8 @@
     </div>
 
     <div class="caja centrado ">
-        
-        <a href="/Admin/estadisticas" class="boton">ESTADISTICAS DE LA APP</a>
+        <p>Descubre los secretos de Animalia explorando los datos cuantitativos de nuestra aplicación:</p>
+        <a href="/Admin/estadisticas" class="boton">ACCEDER A ESTADISTICAS </a>
         
     </div>
     
