--- a/view/header.mustache
+++ b/view/header.mustache
@@ -6,6 +6,7 @@
     <title>Animalia -- Home</title>
     <link rel="stylesheet" type="text/css" href="../public/styles.css">
     <link rel="icon" href="../public/hornerito-panz-lirt.svg" type="image/x-icon">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
      <!-- Enlace a jQuery desde el CDN de Google -->
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
