Footer a la normalidad

--- a/view/footer.mustache
+++ b/view/footer.mustache
@@ -1,4 +1,4 @@
-<footer>
+<footer class="row">
     <div>
         <img src="../public/hornerito-panz-lirt.svg" alt="hornero" 
         class="logo">
